    ADDED: ability to give arguments for the terminal
    ADDED: enable/disable icons in the filenames
    ADDED: ability to configure the fields of the panel (Ext, Size, Perm, ...)
    ADDED: single click selects / executes
    ADDED: panel level toolbar ('..', '/', '~', '=' buttons), thanks to David Harel
    ADDED: Locate (integrating the findutils-locate package of GNU into Krusader). TEST IT
    ADDED: Heiner's patch for 'logical selection mode' is applied and used as default. TEST IT
    ADDED: application dependency setting in konfigurator
    ADDED: Csaba's new konfigurator is here, boys and girls!
    ADDED: heiner's quicksearch patch
    ADDED: calculate occupied space prints the directory's size (wincmd-style) - thanks heiner!
    ADDED: current directory in history menu is checked
    ADDED: a working user menu (try alt+~), but a bit rough on the edges
    ADDED: KrSearch edit/view file in the result list window (F3, F4, right click)
    ADDED: a folder-history button, a-la-total commander. thanks to Hans Loffler!
    ADDED: selectall at rename
    ADDED: new shortcuts to search dialog (heiner)
    ADDED: directory synchronizer
    ADDED: file splitter
    ADDED: a missing credit for Frank in the about box
    FIXED: reimplementing the 'allow move into archive' setting
    FIXED: no restart at changing the icon tray's state in konfigurator
    FIXED: krusader freezes if the `df` process does not terminate (at network errors, IO wait)
    FIXED: krusaderui.rc bug, new menuitems does not appear after a krusader update
    FIXED: sort by EXT did not obey the 'case sensative sort' flag
    FIXED: 2 items on the view menu had the same shortcuts
    FIXED: increased speed of search, by emitting lesssignals (thanks to Lars)
    FIXED: statusbar updated only on mouse clicks, not on keyboard
    FIXED: translation: forcing non-english languages with a strange structure
    FIXED: freeze at modal dialogs and icon tray