@@ -1,3 +1,4 @@
+    ADDED: krusader restart is not necessary from now after changing the configuration
     ADDED: ability to give arguments for the terminal
     ADDED: enable/disable icons in the filenames
     ADDED: ability to configure the fields of the panel (Ext, Size, Perm, ...)
